# modlem: A graphics importer/exporter for Lemmings
# Copyright (C) 2022–2026 David Gow <david@davidgow.net>
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "modlem"
authors = ["David Gow <david@davidgow.net>"]
version = "0.4.0"
edition = "2015"
homepage = "https://davidgow.net/hacks/modlem.html"
license = "LGPL-3.0-or-later"
autobins = false # We don't want confusion with 'main' and the 'main.dat' file

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "modlem"
path = "src/modlem.rs"

[lints.rust]
dead_code = "allow"

[build]

[dependencies]
